--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,10 +6,13 @@ edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
+[lib]
+bench = false
+
 [dependencies]
 futures = "0.3"
 bytes = "1"
-tokio = { version = "1.0.0", features = ["full", "tracing"] }
-tokio-util = { version = "0.6.3", features = ["full"] }
+tokio = { version = "1.11.0", features = ["full", "tracing"] }
+tokio-util = { version = "0.6.8", features = ["full"] }
 tokio-stream = { version = "0.1" }
 deku = "0.12"
