--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,15 +4,15 @@ version = "0.1.0"
 authors = ["Karl Southern <karl@theangryangel.co.uk>"]
 edition = "2018"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
 [lib]
 bench = false
 
 [dependencies]
 futures = "0.3"
+futures-core = "0.3"
 bytes = "1"
 tokio = { version = "1.11.0", features = ["full", "tracing"] }
 tokio-util = { version = "0.6.8", features = ["full"] }
 tokio-stream = { version = "0.1" }
 deku = "0.12"
+pin-project = "1.0.8"
