--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,4 +15,6 @@ tokio = { version = "1.11.0", features = ["full", "tracing"] }
 tokio-util = { version = "0.6.8", features = ["full"] }
 tokio-stream = { version = "0.1" }
 deku = "0.12"
-pin-project = "1.0.8"
+pin-project = "1"
+itertools = "0.10"
+encoding_rs = "0.8"
