--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,4 +18,8 @@ deku = "0.12"
 pin-project = "1"
 itertools = "0.10"
 encoding_rs = "0.8"
-async-stream = "0.3.2"
+tracing = "0.1"
+
+[dev-dependencies]
+# used in examples
+tracing-subscriber = "0.2"
