--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,6 +19,7 @@ pin-project = "1"
 itertools = "0.10"
 encoding_rs = "0.8"
 tracing = "0.1"
+rand = "0.8"
 
 [dev-dependencies]
 # used in examples
