--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ bench = false
 [dependencies]
 futures = "0.3"
 futures-core = "0.3"
+futures-util = "0.3"
 bytes = "1"
 tokio = { version = "1.11.0", features = ["full", "tracing"] }
 tokio-util = { version = "0.6.8", features = ["full"] }
