--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,6 +22,7 @@ encoding_rs = "0.8"
 tracing = "0.1"
 rand = "0.8"
 serde = { version = "1.0", features = ["derive"] }
+paste = "1"
 
 [dev-dependencies]
 # used in examples
