--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,6 +25,7 @@ itertools = "0.10"
 encoding_rs = "0.8"
 tracing = "0.1"
 serde = { version = "1.0", features = ["derive"] }
+bitflags = "1.3"
 
 [dev-dependencies]
 # used in examples
