--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,7 +24,7 @@ pin-project = "1"
 itertools = "0.10"
 encoding_rs = "0.8"
 tracing = "0.1"
-serde = { version = "1.0", features = ["derive"] }
+serde = { version = "1.0", features = ["derive"], optional = true }
 bitflags = "1.3"
 
 [dev-dependencies]
