--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,7 +20,7 @@ tokio = { version = "1.11.0", features = ["full", "tracing"] }
 tokio-util = { version = "0.6.8", features = ["full"] }
 tokio-stream = { version = "0.1", features = ["time"] }
 deku = "0.12"
-pin-project-lite = "0.2.0"
+pin-project = "1.0"
 itertools = "0.10"
 encoding_rs = "0.8"
 tracing = "0.1"
