--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,8 +8,8 @@ edition = "2021"
 bench = false
 
 [features]
-default = ["framework"]
-framework = []
+default = ["client"]
+client = []
 
 [dependencies]
 futures = "0.3"
