--- a/examples/tui/Cargo.toml
+++ b/examples/tui/Cargo.toml
@@ -10,8 +10,7 @@ futures = "0.3"
 tokio = { version = "1", features = ["full"] }
 tracing = "0.1"
 tracing-subscriber = "0.2"
-tui = "0.16"
-termion = "1.5"
-rand = "0.8"
+tui = { version = "0.16.0", features = ["crossterm"], default-features = false }
+crossterm = { version = "0.22.1", features = ["event-stream"] }
 bounded-vec-deque = "0.1"
 chrono = "0.4"
