--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,6 +26,7 @@ encoding_rs = "0.8"
 tracing = "0.1"
 serde = { version = "1.0", features = ["derive"], optional = true }
 bitflags = "1.3"
+flume = "0.10"
 
 [dev-dependencies]
 # used in examples
