--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,17 +8,15 @@ edition = "2021"
 bench = false
 
 [features]
-default = ["client"]
+default = ["client", "uom"]
 client = []
 
 [dependencies]
 futures = "0.3"
-futures-core = "0.3"
 futures-util = "0.3"
 bytes = "1"
 tokio = { version = "1.11.0", features = ["full", "tracing"] }
 tokio-util = { version = "0.6.8", features = ["full"] }
-tokio-stream = { version = "0.1", features = ["time"] }
 deku = "0.12"
 pin-project = "1.0"
 itertools = "0.10"
@@ -27,6 +25,7 @@ tracing = "0.1"
 serde = { version = "1.0", features = ["derive"], optional = true }
 bitflags = "1.3"
 flume = "0.10"
+uom = { version = "0.32.0", features = ["si", "std"], optional = true }
 
 [dev-dependencies]
 # used in examples
