--- a/insim_lua/Cargo.toml
+++ b/insim_lua/Cargo.toml
@@ -4,8 +4,11 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-insim = { path = "../insim" }
-mlua = { version = "0.7.4", features = ["lua54", "vendored"] }
+insim = { path = "../insim", features = ["serde", "client"] }
+mlua = { version = "0.7.4", features = ["lua54", "vendored", "serialize"] }
 clap = { version = "3.1.8", features = ["derive"] }
 tokio = { version = "1.11.0", features = ["full", "tracing"] }
 convert_case = "0.5.0"
+serde = "1.0.136"
+knuffel = "2.0.0"
+miette = { version="4.3.0", features=["fancy"] }
