--- a/insim_lua/Cargo.toml
+++ b/insim_lua/Cargo.toml
@@ -5,10 +5,11 @@ edition = "2021"
 
 [dependencies]
 insim = { path = "../insim", features = ["serde", "client"] }
-mlua = { version = "0.7.4", features = ["lua54", "vendored", "serialize"] }
+mlua = { version = "0.7.4", features = ["lua54", "vendored", "serialize", "send"] }
 clap = { version = "3.1.8", features = ["derive"] }
 tokio = { version = "1.11.0", features = ["full", "tracing"] }
 convert_case = "0.5.0"
 serde = "1.0.136"
 knuffel = "2.0.0"
 miette = { version="4.3.0", features=["fancy"] }
+futures = "0.3"
