--- a/insim/Cargo.toml
+++ b/insim/Cargo.toml
@@ -9,7 +9,7 @@ bench = false
 
 [features]
 default = ["client", "uom"]
-client = []
+client = ["tower-service", "tower", "futures-core", "futures-sink", "crossbeam"]
 
 [dependencies]
 futures = "0.3"
@@ -26,6 +26,16 @@ serde = { version = "1.0", features = ["derive"], optional = true }
 bitflags = "1.3"
 flume = "0.10"
 uom = { version = "0.32.0", features = ["si", "std"], optional = true }
+async-trait = { version = "0.1.53", optional = true }
+thiserror = "1.0.31"
+
+# client stuff
+tower-service = { version = "0.3", optional = true }
+tower = { version = "0.4", features = ["load"], optional = true }
+futures-core = { version = "0.3", optional = true }
+futures-sink = { version = "0.3", optional = true }
+crossbeam = { version = "0.8", optional = true }
+
 
 [dev-dependencies]
 # used in examples
