--- a/insim_lua/Cargo.toml
+++ b/insim_lua/Cargo.toml
@@ -5,7 +5,7 @@ edition = "2021"
 
 [dependencies]
 insim = { path = "../insim", features = ["serde", "client"] }
-mlua = { version = "0.7.4", features = ["lua54", "vendored", "serialize", "send"] }
+mlua = { git = "https://github.com/khvzak/mlua", tag = "v0.8.0-beta.5", features = ["luau", "vendored", "serialize", "send"] }
 clap = { version = "3.1.8", features = ["derive"] }
 tokio = { version = "1.11.0", features = ["full", "tracing"] }
 convert_case = "0.5.0"
