--- a/insim_lua/Cargo.toml
+++ b/insim_lua/Cargo.toml
@@ -11,11 +11,12 @@ tokio = { version = "1.11.0", features = ["full", "tracing"] }
 convert_case = "0.5.0"
 serde = "1.0.136"
 knuffel = "2.0.0"
-miette = { version="4.3.0", features=["fancy"] }
+miette = { version="4.7.1", features=["fancy"] }
 futures = "0.3"
 pin-project = "1.0"
-
-axum-live-view = { git = "https://github.com/davidpdrsn/axum-live-view", features = ["precompiled-js"] }
-axum = "0.5"
-tower = "0.4"
 tracing-subscriber = "0.2"
+tracing = "0.1.34"
+
+# axum-live-view = { git = "https://github.com/davidpdrsn/axum-live-view", features = ["precompiled-js"] }
+# axum = "0.5"
+# tower = "0.4"
