--- a/insim_lua/Cargo.toml
+++ b/insim_lua/Cargo.toml
@@ -16,7 +16,9 @@ futures = "0.3"
 pin-project = "1.0"
 tracing-subscriber = "0.2"
 tracing = "0.1.34"
+chrono = "0.4"
+bounded-vec-deque = "0.1.1"
 
-# axum-live-view = { git = "https://github.com/davidpdrsn/axum-live-view", features = ["precompiled-js"] }
-# axum = "0.5"
-# tower = "0.4"
+axum-live-view = { git = "https://github.com/davidpdrsn/axum-live-view", features = ["precompiled-js"] }
+axum = "0.5"
+tower = "0.4"
