--- a/insim_lua/Cargo.toml
+++ b/insim_lua/Cargo.toml
@@ -18,6 +18,7 @@ tracing-subscriber = "0.2"
 tracing = "0.1.34"
 chrono = "0.4"
 bounded-vec-deque = "0.1.1"
+parking_lot = "0.12"
 
 axum-live-view = { git = "https://github.com/davidpdrsn/axum-live-view", features = ["precompiled-js"] }
 axum = "0.5"
