--- a/insim_lua/config
+++ b/insim_lua/config
@@ -3,6 +3,14 @@ server "test" {
   relay
 
   scripts {
-    path "hello_world.lua"
+    //path "hello_world.lua"
+  }
+}
+
+server "test2" {
+  hostname "[MRc] Beginner BMW"
+  relay
+
+  scripts {
   }
 }
