--- a/insim_lua/Cargo.toml
+++ b/insim_lua/Cargo.toml
@@ -11,7 +11,7 @@ tokio = { version = "1.11.0", features = ["full", "tracing"] }
 convert_case = "0.5.0"
 serde = "1.0.136"
 knuffel = "2.0.0"
-miette = { version="4.7.1", features=["fancy"] }
+miette = { version="4.7.1", features = ["fancy"] }
 futures = "0.3"
 pin-project = "1.0"
 tracing-subscriber = "0.2"
@@ -20,6 +20,9 @@ chrono = "0.4"
 bounded-vec-deque = "0.1.1"
 parking_lot = "0.12"
 
-axum-live-view = { git = "https://github.com/davidpdrsn/axum-live-view", features = ["precompiled-js"] }
-axum = "0.5"
+axum = { version = "0.5", features = ["ws"] }
 tower = "0.4"
+dioxus = { version = "0.2.4", features = ["liveview", "router"] }
+dioxus-html = { features = ["serialize"], version = "0.2.1" }
+dioxus-core = { features = ["serialize"], version = "0.2.1" }
+dioxus-liveview = { version = "0.1.0", features = ["axum"] }
