feat: add RequestId type, remove derive PartialEq and Eq from most struct definitions, add SMX and PTH file definitions, create noddy pth2svg executable, turn FixedPoint into Point<T> and add impl for f32, i32, f64, reduce some unnecessary clone'ing

--- a/insim_lua/config
+++ b/insim_lua/config
@@ -7,10 +7,10 @@ server "test" {
   }
 }
 
-server "test2" {
-  hostname "[MRc] Beginner BMW"
-  relay
-
-  scripts {
-  }
-}
+/* server "test2" { */
+/*   hostname "[MRc] Beginner BMW" */
+/*   relay */
+/**/
+/*   scripts { */
+/*   } */
+/* } */
