--- a/pth2svg/Cargo.toml
+++ b/pth2svg/Cargo.toml
@@ -9,3 +9,4 @@ edition = "2021"
 insim = { path = "../insim" }
 clap = { version = "3.1.8", features = ["derive"] }
 svg = "0.10.0"
+miette = { "version" = "5.3.0", features = ["fancy"]}
