--- a/pth2svg/Cargo.toml
+++ b/pth2svg/Cargo.toml
@@ -10,3 +10,4 @@ insim = { path = "../insim" }
 clap = { version = "3.1.8", features = ["derive"] }
 svg = "0.10.0"
 miette = { "version" = "5.3.0", features = ["fancy"]}
+geojson = "0.24.0"
