--- a/patina/Cargo.toml
+++ b/patina/Cargo.toml
@@ -23,3 +23,4 @@ axum = { version = "0.5", features = ["ws"] }
 tower = "0.4"
 minijinja = { version = "0.23.0", features = ["source"] }
 minijinja-autoreload = "0.23.0"
+async-stream = "0.3.3"
