--- a/patina/Cargo.toml
+++ b/patina/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2021"
 
 [dependencies]
 insim = { path = "../insim", features = ["serde", "client"] }
+indexed_slab = { path = "../indexed_slab" }
 clap = { version = "3.1.8", features = ["derive"] }
 tokio = { version = "1.11.0", features = ["full", "tracing"] }
 convert_case = "0.5.0"
@@ -22,5 +23,4 @@ parking_lot = "0.12"
 axum = { version = "0.5", features = ["ws"] }
 tower = "0.4"
 minijinja = { version = "0.23.0", features = ["source"] }
-minijinja-autoreload = "0.23.0"
 async-stream = "0.3.3"
