--- a/insim/Cargo.toml
+++ b/insim/Cargo.toml
@@ -29,6 +29,7 @@ uom = { version = "0.32.0", features = ["si", "std"], optional = true }
 async-trait = { version = "0.1.53", optional = true }
 thiserror = "1.0.31"
 miette = "4.7.1"
+once_cell = "1.16.0"
 
 [dev-dependencies]
 # used in examples
