--- a/patina/Cargo.toml
+++ b/patina/Cargo.toml
@@ -16,7 +16,7 @@ futures = "0.3"
 pin-project = "1.0"
 tracing-subscriber = "0.2"
 tracing = "0.1.34"
-chrono = "0.4"
+chrono = { version = "0.4", features = ["serde"]}
 bounded-vec-deque = "0.1.1"
 parking_lot = "0.12"
 
@@ -24,3 +24,4 @@ axum = { version = "0.5", features = ["ws"] }
 tower = "0.4"
 minijinja = { version = "0.23.0", features = ["source"] }
 async-stream = "0.3.3"
+md-5 = "0.10.5"
