--- a/multi_index/Cargo.toml
+++ b/multi_index/Cargo.toml
@@ -1,8 +1,8 @@
 [package]
-name = "indexed_slab"
+name = "multi_index"
 version = "0.1.0"
 edition = "2021"
 
 [dependencies]
 slab = { version = "0.4" }
-indexed_slab_derive = { path = "../indexed_slab_derive" }
+multi_index_derive = { path = "../multi_index_derive" }
