--- a/insim/Cargo.toml
+++ b/insim/Cargo.toml
@@ -28,5 +28,7 @@ thiserror = "1.0.31"
 miette = "4.7.1"
 once_cell = "1.16.0"
 
+insim_core = { path = "../insim_core" }
+
 [dev-dependencies]
 tracing-subscriber = "0.2"
