--- a/insim/Cargo.toml
+++ b/insim/Cargo.toml
@@ -10,6 +10,7 @@ bench = false
 [features]
 default = ["client"]
 client = []
+serde = ["dep:serde", "insim_core/serde"]
 
 [dependencies]
 futures = "0.3"
@@ -21,9 +22,9 @@ pin-project = "1.0"
 tracing = "0.1"
 serde = { version = "1", features = ["derive"], optional = true }
 bitflags = "1.3"
-thiserror = "1.0.31"
+thiserror = "1"
 miette = "4.7.1"
-once_cell = "1.16.0"
+once_cell = "1"
 
 insim_core = { path = "../insim_core" }
 
