general clippy fixes, and addressing tidy up from the removal of CodepageString

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -19,3 +19,6 @@ repos:
       - id: fmt
       - id: cargo-check
       - id: clippy
+        # XXX: allowing clippy::unnecessary_cast temporarily until I can
+        # understand if the moaning about repr(u8)'s on the enums is a clippy bug
+        args: ["--", "-D", "warnings", "-A", "clippy::unnecessary_cast"]
