--- a/insim_core/Cargo.toml
+++ b/insim_core/Cargo.toml
@@ -17,3 +17,4 @@ thiserror = "1"
 serde = { version = "1", features = ["derive"], optional = true }
 tracing = "0.1"
 once_cell = "1"
+if_chain = "1.0.2"
