ci: initial ci implementation through github actions, quick mid-meeting hack.

--- a/insim_game_data/Cargo.toml
+++ b/insim_game_data/Cargo.toml
@@ -6,6 +6,10 @@ description = """
 LFS Game Data, such as track information
 """
 
+[lib]
+bench = false
+doctest = false
+
 [features]
 serde = ["dep:serde", "insim_core/serde"]
 
