--- a/insim_core/Cargo.toml
+++ b/insim_core/Cargo.toml
@@ -8,6 +8,10 @@ Core types and traits for the insim crate.
 repository = "https://github.com/theangryangel/insim"
 rust-version = "1.66"  # https://blog.rust-lang.org/2022/12/15/Rust-1.66.0.html#explicit-discriminants-on-enums-with-fields
 
+[lib]
+bench = false
+doctest = false
+
 [dependencies]
 bytes = "1"
 encoding_rs = "0.8"
