--- a/insim/Cargo.toml
+++ b/insim/Cargo.toml
@@ -12,6 +12,9 @@ doctest = false
 default = ["relay"]
 relay = []
 serde = ["dep:serde", "insim_core/serde"]
+game_data = ["dep:insim_game_data"]
+pth = ["dep:insim_pth"]
+smx = ["dep:insim_smx"]
 
 [dependencies]
 futures = "0.3"
@@ -26,6 +29,9 @@ bitflags = "1.3"
 thiserror = "1"
 once_cell = "1"
 insim_core = { path = "../insim_core" }
+insim_game_data = { path = "../insim_game_data", optional = true }
+insim_pth = { path = "../insim_pth", optional = true }
+insim_smx = { path = "../insim_smx", optional = true }
 
 [dev-dependencies]
 tracing-subscriber = { version = "0.3", features = ["env-filter"] }
