--- a/insim/Cargo.toml
+++ b/insim/Cargo.toml
@@ -38,3 +38,4 @@ insim_smx = { path = "../insim_smx", optional = true }
 [dev-dependencies]
 tokio-test = "0.4"
 tracing-subscriber = { version = "0.3", features = ["env-filter"] }
+clap = { version = "4.2", features = ["derive"] }
