--- a/insim/Cargo.toml
+++ b/insim/Cargo.toml
@@ -13,7 +13,11 @@ default = ["relay", "tcp", "udp"]
 tcp = []
 udp = []
 relay = []
-serde = ["dep:serde", "insim_core/serde"]
+serde = [
+  "dep:serde",
+  "insim_core/serde",
+  "insim_game_data?/serde",
+]
 game_data = ["dep:insim_game_data"]
 pth = ["dep:insim_pth"]
 smx = ["dep:insim_smx"]
