refactor: rename client back to connection, with the intention to write an actor-style client in insim_extras

--- a/insim/Cargo.toml
+++ b/insim/Cargo.toml
@@ -9,7 +9,7 @@ bench = false
 doctest = false
 
 [features]
-default = ["relay", "tcp", "udp", "game_state"]
+default = ["relay", "tcp", "udp"]
 tcp = []
 udp = []
 relay = []
@@ -19,8 +19,7 @@ serde = [
   "insim_game_data?/serde",
   "bitflags/serde",
 ]
-game_data = ["dep:insim_game_data", "dep:multi_index"]
-game_state = ["game_data"]
+game_data = ["dep:insim_game_data"]
 pth = ["dep:insim_pth"]
 smx = ["dep:insim_smx"]
 
@@ -40,7 +39,6 @@ insim_core = { path = "../insim_core" }
 insim_game_data = { path = "../insim_game_data", optional = true }
 insim_pth = { path = "../insim_pth", optional = true }
 insim_smx = { path = "../insim_smx", optional = true }
-multi_index = { path = "../multi_index", optional = true }
 async-trait = "0.1.68"
 
 [dev-dependencies]
