--- a/insim_extras/Cargo.toml
+++ b/insim_extras/Cargo.toml
@@ -10,3 +10,10 @@ tokio = { version = "1.11.0", features = ["full", "tracing"] }
 insim = { path = "../insim" }
 insim_game_data = { path = '../insim_game_data' }
 multi_index = { path = "../multi_index" }
+tracing = "0.1"
+
+[dev-dependencies]
+tracing = "0.1"
+tracing-subscriber = { version = "0.3", features = ["env-filter"] }
+clap = { version = "4.2", features = ["derive"] }
+if_chain = "1"
