--- a/insim/Cargo.toml
+++ b/insim/Cargo.toml
@@ -34,6 +34,7 @@ insim_pth = { path = "../insim_pth", optional = true }
 insim_smx = { path = "../insim_smx", optional = true }
 tokio-tungstenite = "0.20.0"
 futures-util = "0.3.28"
+from_variants = "1.0.2"
 
 [dev-dependencies]
 tokio-test = "0.4"
