wip: noddling on race_directord and using it to expose any bugs

--- a/race_directord/Cargo.toml
+++ b/race_directord/Cargo.toml
@@ -15,3 +15,6 @@ tracing-error = "0.2.0"
 color-eyre = "0.6.2"
 toml = "0.8.1"
 serde = "1.0.188"
+axum = "0.6.20"
+async-stream = "*"
+futures = "*"
