--- a/race_directord/Cargo.toml
+++ b/race_directord/Cargo.toml
@@ -19,3 +19,7 @@ axum = "0.6.20"
 async-stream = "*"
 futures = "*"
 if_chain = "1.0.2"
+async-trait = "*"
+flume = "*"
+bevy_ecs = "0.12.1"
+rand = "0.8.5"
