--- a/race_directord/Cargo.toml
+++ b/race_directord/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-insim = { path = "../insim", features = ['serde'] }
+insim = { path = "../insim", features = ['serde', 'bevy_ecs_event'] }
 tokio = { version = "1.11.0", features = ["full"] }
 clap = { version = "4.2", features = ["derive"] }
 tracing = "0.1"
