--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -19,6 +19,13 @@ repos:
       - id: fmt
       - id: cargo-check
       - id: clippy
-        # XXX: allowing clippy::unnecessary_cast temporarily until I can
-        # understand if the moaning about repr(u8)'s on the enums is a clippy bug
-        args: ["--", "-D", "warnings", "-A", "clippy::unnecessary_cast"]
+        # XXX: allowing clippy::unnecessary_fallible_conversions until binrw has
+        # a new release!
+        args:
+          [
+            "--",
+            "-D",
+            "warnings",
+            "-A",
+            "clippy::unnecessary_fallible_conversions",
+          ]
