--- a/insim/Cargo.toml
+++ b/insim/Cargo.toml
@@ -9,6 +9,7 @@ bench = false
 doctest = false
 
 [features]
+default = ["websocket"]
 serde = [
   "dep:serde",
   "insim_core/serde",
@@ -17,6 +18,8 @@ serde = [
 ]
 pth = ["dep:insim_pth"]
 smx = ["dep:insim_smx"]
+websocket = ["dep:tokio-tungstenite"]
+# TODO: feature flags for supported versions/packet defintions. How do we want to do this?
 # v9 = []
 # latest = ["v9"]
 
@@ -32,7 +35,7 @@ if_chain = "1"
 insim_core = { path = "../insim_core" }
 insim_pth = { path = "../insim_pth", optional = true }
 insim_smx = { path = "../insim_smx", optional = true }
-tokio-tungstenite = "0.21.0"
+tokio-tungstenite = { version = "0.21.0", optional = true }
 futures-util = "0.3.28"
 from_variants = "1.0.2"
 indexmap = "2.1.0"
