--- a/insim_pth/Cargo.toml
+++ b/insim_pth/Cargo.toml
@@ -3,6 +3,7 @@ name = "insim_pth"
 version = "0.1.0"
 edition = "2021"
 description = "Insim PTH file implementation"
+rust-version = "1.66"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 [lib]
