--- a/insim/Cargo.toml
+++ b/insim/Cargo.toml
@@ -4,6 +4,8 @@ version = "1.0.0-alpha.1"
 authors = ["Karl Southern <karl@theangryangel.co.uk>"]
 edition = "2021"
 rust-version = "1.66"
+license = "MIT"
+homepage = "https://github.com/theangryangel/insim.rs"
 
 [lib]
 bench = false
