--- a/insim_core/Cargo.toml
+++ b/insim_core/Cargo.toml
@@ -7,6 +7,8 @@ Core types and traits for the insim crate.
 """
 repository = "https://github.com/theangryangel/insim"
 rust-version = "1.66"
+license = "MIT"
+homepage = "https://github.com/theangryangel/insim.rs"
 
 [lib]
 bench = false
