--- a/insim_smx/Cargo.toml
+++ b/insim_smx/Cargo.toml
@@ -4,6 +4,9 @@ version = "1.0.0"
 edition = "2021"
 description = "Insim SMX file implementation"
 rust-version = "1.66"
+license = "MIT"
+repository = "https://github.com/theangryangel/insim.rs"
+homepage = "https://github.com/theangryangel/insim.rs"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 [lib]
