--- a/insim/Cargo.toml
+++ b/insim/Cargo.toml
@@ -3,6 +3,7 @@ name = "insim"
 version = "1.0.0-alpha.1"
 authors = ["Karl Southern <karl@theangryangel.co.uk>"]
 edition = "2021"
+description = "LiveForSpeed Insim implementation that focuses on ergonomics and strong typing"
 rust-version = "1.66"
 license = "MIT"
 homepage = "https://github.com/theangryangel/insim.rs"
