--- a/insim_smx/Cargo.toml
+++ b/insim_smx/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "insim_smx"
-version = "1.0.0"
+version = "1.1.0"
 edition = "2021"
 description = "Insim SMX file implementation"
 rust-version = "1.66"
@@ -14,5 +14,5 @@ bench = false
 doctest = false
 
 [dependencies]
-insim_core = { path = "../insim_core", version = "1.0.0-alpha.1" }
+insim_core = { path = "../insim_core", version = "1" }
 thiserror = "1"
