feat(insim) new WithRequestId trait, with default implementation for anything that is instructional for LFS. I've skipped it for everything else, for now

--- a/insim/Cargo.toml
+++ b/insim/Cargo.toml
@@ -42,7 +42,7 @@ insim_pth = { path = "../insim_pth", optional = true, version = "2.1.0" }
 insim_smx = { path = "../insim_smx", optional = true, version = "2.1.0" }
 serde = { workspace = true, features = ["derive"], optional = true }
 thiserror = { workspace = true }
-tokio = { workspace = true, features = ["rt", "time", "net", "macros", "sync", "tracing"], optional = true }
+tokio = { workspace = true, features = ["time", "net", "macros", "sync", "tracing", "io-util"], optional = true }
 tokio-tungstenite = { workspace = true, optional = true }
 tracing = { workspace = true }
 
