--- a/insim_smx/Cargo.toml
+++ b/insim_smx/Cargo.toml
@@ -17,5 +17,5 @@ bench = false
 doctest = false
 
 [dependencies]
-insim_core = { path = "../insim_core", version = "2.1.0" }
+insim_core = { path = "../insim_core", version = "3.0.0-unreleased" }
 thiserror = { workspace = true }
