--- a/insim_core/Cargo.toml
+++ b/insim_core/Cargo.toml
@@ -19,7 +19,7 @@ doctest = false
 
 [dependencies]
 binrw = { workspace = true }
-bitflags = { workspace = true }
+# bitflags = { workspace = true }
 bytes = { workspace = true }
 encoding_rs = { workspace = true }
 if_chain = { workspace = true }
