--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,10 +1,19 @@
 exclude: |
   LICENSE
 repos:
-  - repo: https://github.com/pre-commit/mirrors-prettier
-    rev: "v2.4.1"
+  - repo: local
     hooks:
       - id: prettier
+        name: prettier (with plugin-xml)
+        entry: prettier
+        args:
+          - --write
+          - --list-different
+          - --ignore-unknown
+        types: [text]
+        language: node
+        additional_dependencies:
+          - "prettier@3.5.3"
   - repo: https://github.com/pre-commit/pre-commit-hooks
     rev: v5.0.0
     hooks:
@@ -16,7 +25,7 @@ repos:
       - id: mixed-line-ending
         args: ["--fix=lf"]
   - repo: https://github.com/crate-ci/typos
-    rev: v1.18.0
+    rev: v1.31.1
     hooks:
       - id: typos
   - repo: https://github.com/doublify/pre-commit-rust
