--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,7 @@
 members = [
   "insim_core",
   "insim",
+  "insim_macros",
   "insim_pth",
   "insim_smx",
   "examples/*",
@@ -48,3 +49,8 @@ tokio-test = "0.4.0"
 tokio-tungstenite = { version = "0.24.0" }
 tracing = "0.1.37"
 tracing-subscriber = { version = "0.3.17" }
+
+syn = { version = "2" }
+quote = "1"
+proc-macro2 = "1"
+darling = "0.20"
