--- a/insim_macros/Cargo.toml
+++ b/insim_macros/Cargo.toml
@@ -15,6 +15,7 @@ proc-macro = true
 syn = { workspace = true, features = ["full"] }
 quote = { workspace = true }
 darling = { workspace = true }
+proc-macro2 = { workspace = true }
 
 [lints]
 workspace = true
