--- a/Cargo.toml
+++ b/Cargo.toml
@@ -51,3 +51,4 @@ tokio-test = "0.4.0"
 tokio-tungstenite = { version = "0.24.0" }
 tracing = "0.1.37"
 tracing-subscriber = { version = "0.3.17" }
+num-traits = "0.2.19"
