--- a/insim_core/Cargo.toml
+++ b/insim_core/Cargo.toml
@@ -25,3 +25,4 @@ insim_macros = { path = "../insim_macros", version = "3.0.0-unreleased" }
 itertools = { workspace = true }
 serde = { workspace = true, features = ["derive"], optional = true }
 thiserror = { workspace = true }
+num-traits = { workspace = true }
