doc: enable feature indication on docs.rs, fixes #157

--- a/insim_macros/Cargo.toml
+++ b/insim_macros/Cargo.toml
@@ -11,6 +11,10 @@ homepage.workspace = true
 [lib]
 proc-macro = true
 
+[package.metadata.docs.rs]
+all-features = true
+rustdoc-args = ["--cfg", "docrs"]
+
 [dependencies]
 syn = { workspace = true, features = ["full"] }
 quote = { workspace = true }
