--- a/insim/Cargo.toml
+++ b/insim/Cargo.toml
@@ -15,6 +15,10 @@ doctest = false
 [lints]
 workspace = true
 
+[package.metadata.docs.rs]
+all-features = true
+rustdoc-args = ["--cfg", "docrs"]
+
 [features]
 default = ["tokio", "blocking", "websocket"]
 blocking = []
