--- a/insim_core/Cargo.toml
+++ b/insim_core/Cargo.toml
@@ -13,6 +13,10 @@ homepage.workspace = true
 [lints]
 workspace = true
 
+[package.metadata.docs.rs]
+all-features = true
+rustdoc-args = ["--cfg", "docrs"]
+
 [lib]
 bench = false
 doctest = false
